@@ -1,12 +1,11 @@
 package net.citizensnpcs.util;
 
+import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
-import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -15,7 +14,6 @@ import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 
 import com.google.common.io.CharStreams;
-import com.mojang.authlib.GameProfile;
 
 import net.citizensnpcs.api.util.Messaging;
 
@@ -24,16 +22,16 @@ public class MojangSkinGenerator {
             throws InterruptedException, ExecutionException {
         return EXECUTOR.submit(() -> {
             DataOutputStream out = null;
-            InputStreamReader reader = null;
+            BufferedReader reader = null;
             try {
-                URL target = new URI("https://api.mineskin.org/generate/upload" + (slim ? "?model=slim" : "")).toURL();
+                URL target = new URL("https://api.mineskin.org/generate/upload" + (slim ? "?model=slim" : ""));
                 HttpURLConnection con = (HttpURLConnection) target.openConnection();
                 con.setRequestMethod("POST");
                 con.setDoOutput(true);
                 con.setRequestProperty("User-Agent", "Citizens/2.0");
                 con.setRequestProperty("Cache-Control", "no-cache");
                 con.setRequestProperty("Content-Type", "multipart/form-data;boundary=*****");
-                con.setConnectTimeout(2000);
+                con.setConnectTimeout(1000);
                 con.setReadTimeout(30000);
                 out = new DataOutputStream(con.getOutputStream());
                 out.writeBytes("--*****\r\n");
@@ -51,15 +49,15 @@ public class MojangSkinGenerator {
                 out.writeBytes("--*****--\r\n");
                 out.flush();
                 out.close();
-                reader = new InputStreamReader(con.getInputStream());
-                String str = CharStreams.toString(reader);
-                if (Messaging.isDebugging()) {
-                    Messaging.debug(str);
-                }
-                if (con.getResponseCode() != 200)
+                if (con.getResponseCode() != 200) {
+                    if (Messaging.isDebugging()) {
+                        reader = new BufferedReader(new InputStreamReader(con.getErrorStream()));
+                        Messaging.log(new String(CharStreams.toString(reader)));
+                    }
                     return null;
-
-                JSONObject output = (JSONObject) new JSONParser().parse(str);
+                }
+                reader = new BufferedReader(new InputStreamReader(con.getInputStream()));
+                JSONObject output = (JSONObject) new JSONParser().parse(reader);
                 JSONObject data = (JSONObject) output.get("data");
                 con.disconnect();
                 return data;
@@ -84,9 +82,9 @@ public class MojangSkinGenerator {
             throws InterruptedException, ExecutionException {
         return EXECUTOR.submit(() -> {
             DataOutputStream out = null;
-            InputStreamReader reader = null;
+            BufferedReader reader = null;
             try {
-                URL target = new URI("https://api.mineskin.org/generate/url").toURL();
+                URL target = new URL("https://api.mineskin.org/generate/url");
                 HttpURLConnection con = (HttpURLConnection) target.openConnection();
                 con.setRequestMethod("POST");
                 con.setDoOutput(true);
@@ -94,7 +92,7 @@ public class MojangSkinGenerator {
                 con.setRequestProperty("Cache-Control", "no-cache");
                 con.setRequestProperty("Accept", "application/json");
                 con.setRequestProperty("Content-Type", "application/json");
-                con.setConnectTimeout(2000);
+                con.setConnectTimeout(1000);
                 con.setReadTimeout(30000);
                 out = new DataOutputStream(con.getOutputStream());
                 JSONObject req = new JSONObject();
@@ -105,15 +103,15 @@ public class MojangSkinGenerator {
                 }
                 out.writeBytes(req.toJSONString().replace("\\", ""));
                 out.close();
-                reader = new InputStreamReader(con.getInputStream());
-                String str = CharStreams.toString(reader);
-                if (Messaging.isDebugging()) {
-                    Messaging.debug(str);
-                }
-                if (con.getResponseCode() != 200)
+                if (con.getResponseCode() != 200) {
+                    if (Messaging.isDebugging()) {
+                        reader = new BufferedReader(new InputStreamReader(con.getErrorStream()));
+                        Messaging.log(new String(CharStreams.toString(reader)));
+                    }
                     return null;
-
-                JSONObject output = (JSONObject) new JSONParser().parse(str);
+                }
+                reader = new BufferedReader(new InputStreamReader(con.getInputStream()));
+                JSONObject output = (JSONObject) new JSONParser().parse(reader);
                 JSONObject data = (JSONObject) output.get("data");
                 con.disconnect();
                 return data;
@@ -124,81 +122,6 @@ public class MojangSkinGenerator {
                     } catch (IOException e) {
                     }
                 }
-                if (reader != null) {
-                    try {
-                        reader.close();
-                    } catch (IOException e) {
-                    }
-                }
-            }
-        }).get();
-    }
-
-    public static GameProfile getFilledGameProfileByXUID(String name, long xuid)
-            throws InterruptedException, ExecutionException {
-        return EXECUTOR.submit(() -> {
-            InputStreamReader reader = null;
-            try {
-                URL target = new URI("https://api.geysermc.org/v2/skin/" + xuid).toURL();
-                HttpURLConnection con = (HttpURLConnection) target.openConnection();
-                con.setRequestMethod("GET");
-                con.setRequestProperty("User-Agent", "Citizens/2.0");
-                con.setRequestProperty("Accept", "application/json");
-                con.setConnectTimeout(2000);
-                con.setReadTimeout(20000);
-                reader = new InputStreamReader(con.getInputStream());
-                String str = CharStreams.toString(reader);
-                if (Messaging.isDebugging()) {
-                    Messaging.debug(str);
-                }
-                if (con.getResponseCode() != 200)
-                    return null;
-
-                JSONObject output = (JSONObject) new JSONParser().parse(str);
-                con.disconnect();
-                String hex = Long.toHexString(xuid);
-                GameProfile profile = new GameProfile(
-                        UUID.fromString("00000000-0000-0000-" + hex.substring(0, 4) + "-" + hex.substring(4)), name);
-                new SkinProperty((String) output.get("texture_id"), (String) output.get("value"),
-                        (String) output.get("signature")).apply(profile);
-                return profile;
-            } finally {
-                if (reader != null) {
-                    try {
-                        reader.close();
-                    } catch (IOException e) {
-                    }
-                }
-            }
-        }).get();
-    }
-
-    public static Long getXUIDFromName(String name) throws InterruptedException, ExecutionException {
-        return EXECUTOR.submit(() -> {
-            InputStreamReader reader = null;
-            try {
-                URL target = new URI("https://api.geysermc.org/v2/xbox/xuid/" + name).toURL();
-                HttpURLConnection con = (HttpURLConnection) target.openConnection();
-                con.setRequestMethod("GET");
-                con.setRequestProperty("User-Agent", "Citizens/2.0");
-                con.setRequestProperty("Accept", "application/json");
-                con.setConnectTimeout(2000);
-                con.setReadTimeout(10000);
-                reader = new InputStreamReader(con.getInputStream());
-                String str = CharStreams.toString(reader);
-                if (Messaging.isDebugging()) {
-                    Messaging.debug(str);
-                }
-                if (con.getResponseCode() != 200)
-                    return null;
-
-                JSONObject output = (JSONObject) new JSONParser().parse(str);
-                con.disconnect();
-                if (!output.containsKey("xuid"))
-                    return null;
-
-                return ((Number) output.get("xuid")).longValue();
-            } finally {
                 if (reader != null) {
                     try {
                         reader.close();
